# django-sales

./: README.md  pyproject.toml
django_sales_ve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sales/: __init__.py  apps.py  conf.py  enums.py
sales/api/: serializers.py  urls.py  views.py
sales/models/: config.py  doc_creditnote.py  doc_invoice.py  doc_receipt.py  item.py  party.py
sales/posting/: adapters.py  reversal.py
sales/tests/: test_creditnote_posting.py  test_refund_posting.py
sales/utils/: money.py  tax.py
