[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "django-sales"
version = "0.2.0"
description = "Sales (products & services) with invoices, credit notes, receipts, refunds, GST split, and accounting integration."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Verified Enquiries / Tushar K.", email = "support@verifiedenquiries.com"}]
license = {text = "MIT"}
dependencies = [
"Django>=5.0",
"djangorestframework>=3.15",
"django-finacc>=0.1.0",
]
classifiers = [
"Framework :: Django",
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
]


[tool.setuptools]
include-package-data = true
packages = [
"sales", "sales.utils", "sales.models", "sales.posting", "sales.api", "sales.mgmt.commands"
]