[project]
name = "django-sales-ve"    # â† new, unique PyPI distribution name
version = "0.2.1"           # bump because you built 0.2.0 already
description = "Sales (products & services) with invoices, credit notes, receipts, refunds, GST split, and django-finacc integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0",
  "djangorestframework>=3.15",
  "django-finacc>=0.1.0",
]
